# simple-survey-api

./: .gitignore  Dockerfile  compose.yml  fastapi.env  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  db.py
app/database/: models.py  schemas.py
app/database/dummy_data/: populate_database.py  user_response.json
app/helpers/: get_certificates_by_id.py  questions.py  responses.py  services.py
