[tool.poetry]
name = "simple-survey-api"
version = "0.1.0"
description = ""
authors = ["Mbatha-Marvin <mbathamarvin597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.0.3"
psycopg2-binary = "^2.9.9"
pydantic-xml = {extras = ["lxml"], version = "^2.4.0"}
xmltodict = "^0.13.0"
pydantic = {extras = ["email"], version = "^2.4.2"}
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
